--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,126 @@
+aiodns==3.0.0
+aiohttp==3.8.4
+aiopg==1.4.0
+aiosignal==1.3.1
+anyio==3.6.2
+apache-libcloud==3.7.0
+APScheduler==3.10.1
+asgiref==3.7.2
+async-timeout==4.0.2
+asyncpg==0.27.0
+attrs==22.1.0
+bcrypt==4.0.1
+beautifulsoup4==4.11.2
+bs4==0.0.1
+build==1.0.3
+CacheControl==0.12.11
+cchardet==2.1.7
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.1
+cleo==2.0.1
+click==8.1.3
+containers==0.0.4
+coverage==6.5.0
+crashtest==0.4.1
+cryptography==41.0.4
+databases==0.7.0
+dependency-injector==4.41.0
+distlib==0.3.6
 Django==4.1.2
+django-cors-headers==4.3.1
+django-debug-toolbar==4.2.0
 djangorestframework==3.14.0
-djangorestframework_simplejwt==5.3.0
-drf_yasg==1.21.7
+djangorestframework-simplejwt==5.3.0
+docopt==0.6.2
+drf-yasg==1.21.7
+dulwich==0.20.50
+DynamicMachine==1.0.4
+exceptiongroup==1.0.1
+fastapi==0.91.0
+filelock==3.9.0
+flake8==6.1.0
+frozenlist==1.3.3
+h11==0.14.0
+html5lib==1.1
+httpcore==0.18.0
+httpx==0.25.0
+idna==3.3
+importlib-metadata==6.0.0
+inflection==0.5.1
+iniconfig==1.1.1
+Inject==4.3.1
+jaraco.classes==3.2.3
+jsonconfigfile==1.0
+jsonschema==4.17.3
+jwt==1.3.1
+keyring==23.13.1
+lockfile==0.12.2
+mccabe==0.7.0
+model-bakery==1.9.0
+more-itertools==9.0.0
+msgpack==1.0.4
+multidict==6.0.4
+packaging==21.3
+pexpect==4.8.0
+Pillow==9.2.0
+pip-tools==7.3.0
+pipreqs==0.4.13
+pkginfo==1.9.6
+platformdirs==2.6.2
+pluggy==1.0.0
+poetry==1.3.2
+poetry-core==1.4.0
+poetry-plugin-export==1.3.0
+provide==0.8
+psycopg2==2.9.3
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pycares==4.3.0
+pycodestyle==2.11.1
+pycparser==2.21
+pydantic==1.10.4
+PyExecJS==1.5.1
+pyflakes==3.1.0
+PyJWT==2.8.0
+pyparsing==3.0.9
+pyproject_hooks==1.0.0
+pyrsistent==0.19.3
+pytest==7.2.0
+pytest-asyncio==0.21.1
+pytest-cov==4.0.0
+pytest-django==4.5.2
+python-dotenv==0.21.1
+pytz==2022.5
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0.1
+rapidfuzz==2.13.7
+requests==2.28.1
+requests-toolbelt==0.10.1
+shellingham==1.5.1
+singleton3==1.0
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4
+SQLAlchemy==1.4.46
+sqlparse==0.4.3
+starlette==0.24.0
+tabulate==0.9.0
+tomli==2.0.1
+tomlkit==0.11.6
+trove-classifiers==2023.2.8
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+uritemplate==4.1.1
+urllib3==1.26.12
+uvicorn==0.20.0
+virtualenv==20.19.0
+vk-api==11.9.9
+vkapi==1.1
+webencodings==0.5.1
+xattr==0.10.1
+yarg==0.1.9
+yarl==1.8.2
+yoyo-migrations==8.2.0
+zipp==3.13.0
